# hform

./: LICENSE  README.md  hform.cabal
src/lib/: Hform.hs
src/lib/Data/Logic/: CNFClauses.hs  DNFClauses.hs  PropositionalFormula.hs
src/lib/Hform/: Util.hs
test/: HformSpec.hs
