name:                hform
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/entze/hform
license:             MIT
license-file:        LICENSE
author:              Lukas Grassauer
maintainer:          lukas@grassauer.eu
copyright:           2020 Lukas Grassauer
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Hform,
                       Hform.Util
                       Data.Logic.PropositionalFormula,
                       Data.Logic.DNFClauses
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.6 && < 1,
                       prettyprinter >= 1.6 && < 2
  default-language:    Haskell2010


test-suite HformSpec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  main-is:             HformSpec.hs
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5,
                       hspec >= 2.7 && <3,
                       QuickCheck >= 2.13 && <3,
                       hform
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Entze/hform
